2013-01-19  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (acl_set_file): Treat ERROR_ACCESS_DENIED from
	set_file_security as failure due to insufficient privileges.
	Reported by Fabrice Popineau <fabrice.popineau@supelec.fr>.
	(fstat): Return owner and group like 'stat' and 'lstat' do.

2013-01-19  Paul Eggert  <eggert@cs.ucla.edu>

	Work around bug in CIFS and vboxsf file systems (Bug#13149).
	The bug was observed on Ubuntu operating inside a virtual machine,
	editing files mounted via CIFS or vboxsf from the MS Windows 7 host.
	The workaround introduces a race condition on non-buggy hosts,
	but it's an unlikely race and anyway there's a nearly identical
	nearby race that can't be fixed.
	* fileio.c (valid_timestamp_file_system, timestamp_file_system):
	New static vars.
	(Fwrite_region): Test for file system time stamp bug.
	(init_fileio): New function.
	* lisp.h (init_fileio): Declare it.
	* emacs.c (main): Call it.

	* fileio.c (Finsert_file_contents): Simplify new diagnostic
	and make it more consistent with other stat-failure diagnostics.

2013-01-18  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix crash when inserting data from non-regular files.  See
	http://lists.gnu.org/archive/html/emacs-devel/2013-01/msg00406.html
	for the error description produced by valgrind.
	* fileio.c (read_non_regular): Rename to read_contents.
	Free Lisp_Save_Value object used to pass parameters.
	(read_non_regular_quit): Rename to read_contents_quit.
	(Finsert_file_contents): Redesign internal file reading loop to adjust
	gap and end positions after each read and so help make_gap to work
	properly.  Do not signal an I/O error too early and so do not leave
	not yet decoded characters in a buffer, which was the reason of
	redisplay crash.  Use list2 to build return value.  Adjust comments.

2013-01-17  Paul Eggert  <eggert@cs.ucla.edu>

	Close a race when statting and reading files (Bug#13149).
	* fileio.c (Finsert_file_contents): Use open+fstat, not stat+open.